--- a/src/main/resources/application-mysql.properties
+++ b/src/main/resources/application-mysql.properties
@@ -4,7 +4,7 @@ database=mysql
 spring.datasource.username=root
 spring.datasource.password=petclinic
 
-spring.cloud.gcp.sql.database-name=petclinic
-spring.cloud.gcp.sql.instance-connection-name=prueba-spring-boot-219518:us-central1:prueba-spring-boot
+#spring.cloud.gcp.sql.database-name=petclinic
+#spring.cloud.gcp.sql.instance-connection-name=prueba-spring-boot-219518:us-central1:prueba-spring-boot
 # Uncomment this the first time the app runs
 spring.datasource.initialization-mode=always
