Save user into database

--- a/src/main/resources/application-mysql.properties
+++ b/src/main/resources/application-mysql.properties
@@ -8,3 +8,5 @@ spring.datasource.password=petclinic
 #spring.cloud.gcp.sql.instance-connection-name=prueba-spring-boot-219518:us-central1:prueba-spring-boot
 # Uncomment this the first time the app runs
 spring.datasource.initialization-mode=always
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
