--- a/pom.xml
+++ b/pom.xml
@@ -45,11 +45,19 @@
           </dependency>
           
       -->       <!-- To get proper log entries, you must exclude the jul-to-slf4j artifact by marking it as provided. -->    
-          <dependency>
+    <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>jul-to-slf4j</artifactId>
       <scope>provided</scope>
     </dependency>
+    
+    <!-- https://mvnrepository.com/artifact/org.springframework.social/spring-social-facebook -->
+	<dependency>
+	    <groupId>org.springframework.social</groupId>
+	    <artifactId>spring-social-facebook</artifactId>
+	    <version>2.0.3.RELEASE</version>
+	</dependency>
+    
     
     <!--  
       <dependency>
