--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,8 +9,12 @@ spring.thymeleaf.mode=HTML
 
 #facebook login
 
-security.oauth2.client.clientId=2112285225768195
-security.oauth2.client.clientSecret=12a1e11418093db18cf25031725cbe66
+security.oauth2.client.clientId=1848531161934412
+# prod: security.oauth2.client.clientId=1848531161934412
+security.oauth2.client.clientSecret=18972eedfd440c8b611d088c93b48e3c
+security.oauth2.client.scope=email
+# prod: 12a1e11418093db18cf25031725cbe66
+	
 security.oauth2.client.accessTokenUri=https://graph.facebook.com/oauth/access_token
 security.oauth2.client.userAuthorizationUri=https://www.facebook.com/dialog/oauth
 security.oauth2.client.tokenName=oauth_token
@@ -37,3 +41,5 @@ spring.datasource.data=classpath*:db/${database}/data.sql
 # In the last line, add mysql to the spring.profiles.active property
 #management.contextPath=/_ah
 spring.profiles.active=mysql
+#spring.jpa.hibernate.ddl-auto=create-drop
+#spring.jpa.show-sql=true
